Actualiza archivo: habitaciones/index.html

--- a/habitaciones/index.html
+++ b/habitaciones/index.html
@@ -25,8 +25,8 @@
             >Inicio</a
           >
           <a
-            class="cursor-pointer text-blue-600 hover:text-blue-800"
-            id="hazteunacuenta"
+            class="cursor-pointer text-blue-600 hover:text-blue-800 hazteunacuenta"
+    
             href="../login/registro.html"
             >Hazte una cuenta</a
           >
@@ -36,8 +36,13 @@
             >Habitaciones</a
           >
           <a
-            class="cursor-pointer text-blue-600 hover:text-blue-800"
-            id="cerrarSesion"
+            class="cursor-pointer text-blue-600 hover:text-blue-800 habitacionesReservadas"
+            href="../usuario/habitacionesReservadas.html"
+        
+            >Habitaciones reservadas
+          </a>
+          <a
+            class="cursor-pointer text-blue-600 hover:text-blue-800 cerrarSesion"
             >Cerrar sesión</a
           >
         </div>
@@ -66,19 +71,24 @@
       <!-- menu desplegable en pantallas pequeñas -->
       <div id="mobileMenu" class="hidden md:hidden bg-white shadow-md">
         <a
-          class="block px-4 py-2 text-blue-600 hover:text-blue-800"
+          class="block px-4 py-2 text-blue-600 hover:text-blue-800 hazteunacuenta"
           href="../login/registro.html"
           >Hazte una cuenta</a
         >
         <a
           class="block px-4 py-2 text-blue-600 hover:text-blue-800"
-          href="./habitaciones/index.html"
+          href="./index.html"
           >Habitaciones</a
         >
 
         <a
-          class="block px-4 py-2 text-blue-600 hover:text-blue-800"
-          id="cerrarSesion"
+        class="block px-4 py-2 text-blue-600 hover:text-blue-800 habitacionesReservadas"
+        href="../usuario/habitacionesReservadas.html"
+        >Habitaciones reservadas
+        </a>
+
+        <a
+          class="block px-4 py-2 text-blue-600 hover:text-blue-800 cerrarSesion"
           >Cerrar sesión</a
         >
       </div>
